# Ipseity

./: .gitignore  INFO  NOTES  ipseity.cabal  stack.yaml  test.hs  test.ini  test.json  wrong.ini  wrong2.ini  wrong3.ini  wrong4.ini
app/: Main.hs
src/: Ipseity.hs
src/Ipseity/: Cmdline.hs  Init.hs  Ipseity.hs  Precept.hs  Types.hs
src/Ipseity/Init/: Incept.hs  Precept.hs
test/: Spec.hs
