name:                ipseity
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ipseity.Ipseity
                     , Ipseity.Init
                     , Ipseity.Types
                     , Ipseity.Init.Precept
  build-depends:       base >= 4.7 && < 5
                     , text
                     , directory
                     , unordered-containers
                     , MissingH
                     , htoml
  default-language:    Haskell2010
  extensions:          OverloadedStrings

executable ipseity-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ipseity
                     , text
                     , directory
                     , unordered-containers
                     , MissingH
                     , htoml
  default-language:    Haskell2010
  extensions:          OverloadedStrings

test-suite ipseity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ipseity
                     , text
                     , directory
                     , unordered-containers
                     , MissingH
                     , htoml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/name/project
